@@ -273,6 +273,8 @@ documents those changes that are of interest to users and admins.
  -- Add range check for SuspendTime configuration parameter.
  -- Moved unzipped python-hostname tarball out and the tarball in.
  -- BLUEGENE - Patched memory leak when running state test.
+ -- BLUEGENE - fixed slow down generated by slow call rm_get_BG 
+    and polling thread.
 
 * Changes in SLURM 2.0.6
 ========================
